--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^6.23.1",
     "@clerk/themes": "^2.2.52",
     "@e2b/code-interpreter": "^1.5.1",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.8.3",
     "@prisma/client": "^6.10.1",
@@ -55,6 +56,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.0",
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.523.0",
