--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.23.1",
     "@clerk/themes": "^2.2.52",
     "@e2b/code-interpreter": "^1.5.1",
