--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.0",
     "embla-carousel-react": "^8.6.0",
+    "form-data": "^4.0.3",
     "framer-motion": "^12.23.0",
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
