--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "form-data": "^4.0.3",
     "framer-motion": "^12.23.0",
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
@@ -87,6 +89,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
